Táblázat méretei nagyjából belőve.

--- a/Main.html
+++ b/Main.html
@@ -1,51 +1,53 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="Main_Stylesheet.css">
 	<title>Termek</title>
 </head>
 <body>
-	<table border="1px">
-		<thead>
-			<tr>
-				<th colspan="7">E heti órák</th>
-			</tr>
-			<tr>
-				<th></th>
-				<th>Hétfő</th>
-				<th>Kedd</th>
-				<th>Szerda</th>
-				<th>Csütörtök</th>
-				<th>Péntek</th>
-			</tr>
-			<tr>
-				<th>1. óra</th>
-			</tr>
-			<tr>
-				<th>2. óra</th>
-			</tr>
-			<tr>
-				<th>3. óra</th>
-			</tr>
-			<tr>
-				<th>4. óra</th>
-			</tr>
-			<tr>
-				<th>5. óra</th>
-			</tr>
-			<tr>
-				<th>6. óra</th>
-			</tr>
-			<tr>
-				<th>7. óra</th>
-			</tr>
-			<tr>
-				<th>8. óra</th>
-			</tr>
-		</thead>
-		<tbody>
+	<div>
+		<table border="1px">
+			<thead>
+				<tr>
+					<th id="tableTitle"; colspan="7">E heti órák</th>
+				</tr>
+				<tr>
+					<th></th>
+					<th class="napok">Hétfő</th>
+					<th class="napok">Kedd</th>
+					<th class="napok">Szerda</th>
+					<th class="napok">Csütörtök</th>
+					<th class="napok">Péntek</th>
+				</tr>			
+			</thead>
+			<tbody>
+				<tr>
+					<td class="ora">1. óra</td>
+				</tr>
+				<tr>
+					<td class="ora">2. óra</td>
+				</tr>
+				<tr>
+					<td class="ora">3. óra</td>
+				</tr>
+				<tr>
+					<td class="ora">4. óra</td>
+				</tr>
+				<tr>
+					<td class="ora">5. óra</td>
+				</tr>
+				<tr>
+					<td class="ora">6. óra</td>
+				</tr>
+				<tr>
+					<td class="ora">7. óra</td>
+				</tr>
+				<tr>
+					<td class="ora">8. óra</td>
+				</tr>
 			
-		</tbody>
-	</table>
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
