Néhány szín adva a táblázathoz

--- a/Main.html
+++ b/Main.html
@@ -13,11 +13,11 @@
 				</tr>
 				<tr>
 					<th></th>
-					<th class="napok">Hétfő</th>
-					<th class="napok">Kedd</th>
-					<th class="napok">Szerda</th>
-					<th class="napok">Csütörtök</th>
-					<th class="napok">Péntek</th>
+					<th class="napok"; id="hetfo">Hétfő</th>
+					<th class="napok"; id="kedd">Kedd</th>
+					<th class="napok"; id="szerda">Szerda</th>
+					<th class="napok"; id="csutortok">Csütörtök</th>
+					<th class="napok"; id="pentek">Péntek</th>
 				</tr>			
 			</thead>
 			<tbody>
